# relliptic

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/utils/: error.rs
tests/: relliptic_test.rs
