[package]
name = "relliptic"
version = "0.1.0"
edition = "2021"
authors = ["Varun Doshi"]
description = "Finite Field Elliptic Curves in rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/varun-doshi/relliptic.git"
repository = "https://github.com/varun-doshi/relliptic.git"
readme = "README.md"

[dependencies]
rpolynomial = { git = "https://github.com/varun-doshi/rpolynomial.git", branch = "main"}
modc = { git = "https://github.com/varun-doshi/modc.git", branch = "next"}
primitive-types = "0.12.2"